[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menu/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/Intro.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menu/Continue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level/intro/Intro_Entrance.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 840.0
margin_bottom = 480.0
stretch = true
stretch_shrink = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 84, 48 )
size_override_stretch = true
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Intro" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="Intro_Entrance" parent="ViewportContainer/Viewport" instance=ExtResource( 5 )]
visible = false

[node name="Continue" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]
visible = false

[node name="Menu" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]
visible = false

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CutsceneTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="IntroTimer" to="." method="_on_IntroTimer_timeout"]
[connection signal="timeout" from="CutsceneTimer" to="." method="_on_CutsceneTimer_timeout"]
